--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           divide
         </label>
       </div>        
-      <button type="submit" class="btn">Go!</button>
+      <button type="submit" class="btn-warning">Go!</button>
     </form>
     <div id="output">
 
